--- a/rsd/settings.json
+++ b/rsd/settings.json
@@ -1,1 +1,1 @@
-{"h": 255, "s": 207, "v": 255, "lv": 212, "th": 173, "k": 20}
+{"h": 255, "s": 207, "v": 255, "lv": 194, "th": 173, "k": 30, "rms": 18}
